--- a/pages/login.html
+++ b/pages/login.html
@@ -24,5 +24,6 @@
             <button type="submit" class="">Entrar</button>
         </div>
       </form>
+    <script src="../js/login.js"></script>
 </body>
 </html>
