--- a/pages/login.html
+++ b/pages/login.html
@@ -11,19 +11,18 @@
     <title>Login</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form method="post">
         <div class="flex-center">
-            <label class="">Usuario</label>
+            <label>Usuario</label>
             <div class="gap-5"></div>
-            <input type="text" class="" id="" name="user">
+            <input type="text" id="user" name="user">
                 <div class="gap-10"></div>
-            <label for="" class="">Senha</label>
+            <label>Senha</label>
             <div class="gap-5"></div>
-            <input type="password" class="" id="inputPassword3" name="password">
+            <input type="password" id="password" name="password">
             <div class="gap-10"></div>
-            <button type="submit" class="">Entrar</button>
+            <button onclick="login()" type="submit">Entrar</button>
         </div>
       </form>
-    <script src="../js/login.js"></script>
 </body>
 </html>
