--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,7 @@
     <title>Login</title>
 </head>
 <body>
-    <form method="post">
+    <form action="../php/verifyLogin.php" method="post">
         <div class="flex-center">
             <label>Usuario</label>
             <div class="gap-5"></div>
