--- a/pages/login.html
+++ b/pages/login.html
@@ -11,18 +11,17 @@
     <title>Login</title>
 </head>
 <body>
-    <form action="../php/verifyLogin.php" method="post">
-        <div class="flex-center">
-            <label>Usuario</label>
-            <div class="gap-5"></div>
-            <input type="text" id="user" name="user">
+    <div class="flex-center">
+        <label>Usuario</label>
+         <div class="gap-5"></div>
+        <input type="text" id="user" name="user">
                 <div class="gap-10"></div>
-            <label>Senha</label>
-            <div class="gap-5"></div>
-            <input type="password" id="password" name="password">
+        <label>Senha</label>
+        <div class="gap-5"></div>
+        <input type="password" id="password" name="password">
             <div class="gap-10"></div>
-            <button onclick="login()" type="submit">Entrar</button>
+        <button onclick="login()" type="submit">Entrar</button>
         </div>
-      </form>
+      <script src="../js/login.js"></script>
 </body>
 </html>
